--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -50,6 +50,8 @@ jsonschema==4.25.1
 jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
 keyring==25.6.0
+langchain-core==1.1.0
+langchain-text-splitters==1.0.0
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mcp==1.21.1
@@ -103,6 +105,7 @@ rpds-py==0.28.0
 safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.3
+schedule==1.2.2
 sentry-sdk==2.44.0
 setuptools==80.9.0
 shellingham==1.5.4
