--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,8 +19,8 @@ services:
         condition: service_started
     environment:
       - PYTHONPATH=/app/src
-      - HF_ENDPOINT=https://huggingface.co
-      # - HF_ENDPOINT=https://hf-mirror.com
+      # - HF_ENDPOINT=https://huggingface.co
+      - HF_ENDPOINT=https://hf-mirror.com
       - QDRANT_HOST=qdrant-docker
       - QDRANT_PORT=6333
       - NEO4J_URI=bolt://neo4j-docker:7687
