localhost->host.docker.internal for Ollama API base URL

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -48,7 +48,7 @@ MOS_EMBEDDER_MODEL=bge-m3                 # siliconflow → use BAAI/bge-m3
 MOS_EMBEDDER_API_BASE=http://localhost:8000/v1 # required when universal_api
 # embedding model key
 MOS_EMBEDDER_API_KEY=EMPTY                 # required when universal_api
-OLLAMA_API_BASE=http://localhost:11434     # required when backend=ollama
+OLLAMA_API_BASE=http://host.docker.internal:11434     # required when backend=ollama
 # reranker config
 MOS_RERANKER_BACKEND=http_bge             # http_bge | http_bge_strategy | cosine_local
 # reranker url
